[package]
name = "solana-nostd-secp256k1-recover"
authors = ["Dean Little <@deanmlittle>"]
description = "A more efficient implementation of Secp256k1 Recover for SVM"
version = "0.1.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
k256 = { version = "0.10.4", default-features = false, features = ["ecdsa"], optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
k256 = { version = "0.10.4", default-features = false, features = ["ecdsa"] }